fixed form on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Noto+Serif+Display:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 html, body {
-  background-color: #F0F0F0;
-  margin: 0;
-  border: 0;
-  padding: 0;
-
   --header-font-size: 10rem;
   --header-letter-space: 1.5rem;
   --header-line-height: 1;
@@ -20,6 +15,14 @@ html, body {
 
   --section-height: max(100vh, 50rem);
   --border-radius: 0.5rem;
+
+  --white: #F0F0F0;
+  --black: #131313;
+
+  background-color: var(--white);
+  margin: 0;
+  border: 0;
+  padding: 0;
 }
 
 @media only screen and (max-width: 768px)  {
