--- a/src/styles/hero.module.css
+++ b/src/styles/hero.module.css
@@ -51,6 +51,6 @@
 }
 
 .date {
-  color: #F0F0F0;
-  text-shadow: 0px 0px 12px #131313;
+  color: var(--white);
+  text-shadow: 0px 0px 12px var(--black);
 }
